syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message SyntheticExpiryOpenMark {
    message PKey {
        
        ExpiryKey ekey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    DateKey trade_date = 100;
    double bid_prc = 103; // bid price (SR bid price from previous day)
    double ask_prc = 106; // ask price (SR ask price from previous day)
    double sr_cls_prc = 109; // SR open mark; [SR close mark (close - 1min) from previous day]
    double close_prc = 112; // exchange open mark; [exchange close mark from previous day]
    google.protobuf.Timestamp timestamp = 115;
}


